# stocks-analytics-elt-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_improvements.md  compose.yml  docker-compose.override.yml  hash.py  mkdocs.yml  pyproject.toml  requirements.txt
airflow/dags/: dag_stocks_pipeline.py
config/: api.env  db.env  items.py  load_data.py  logging_config.py
dags/: dag_gold_layer.py  dag_gold_layer_dbt.py  dag_silver_layer.py
dags/dbt/elt_pipeline_stocks/: .sqlfluff  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dags/dbt/elt_pipeline_stocks/macros/: generate_database_name.sql.ignore  generate_schema_name.sql.ignore
dags/dbt/elt_pipeline_stocks/models/: dbt_docs.md  dim_date.sql  dim_stock.sql  fact_stocks_prices.sql  gold.yml  silver.yml
dags/dbt/elt_pipeline_stocks/models/gold/: dim_date.sql  dim_source.sql  dim_stock.sql  dimensions.yml  fact_adjusted_prices.sql  facts.yml
dags/dbt/elt_pipeline_stocks/models/staging/: sources.yml  stg_stocks.sql  stg_weekly_adjusted_prices.sql  stg_weekly_adjusted_prices.yml
dags/dbt/elt_pipeline_stocks/seeds/: stock_metadata.csv
deprecated/: DEPRECATED-extract.py
docs/: NARRATIVE.md  TODO.md  airflow_pipeline_flow.md  alpha.md  architecture.md  data integration e-e-e vs e-l-t   data-modeling.md  decision-log.md  decision-summary.md  development-setup.md  diagrams.md  future_improvements.md  images_sources.md  index.md  learning-journey.md  localstackport.md  notes.md  prompts.md  refactoring.md  solved.md  todo.md  troubleshooting.md
docs/adr/: 0001-absolute-imports-packaging.md  0002-silver-layer-strategy.md  0003-enrichment-metadata-seeds.md
docs/architecture/: deprecated_gold_schema.sql
docs/notes/: boto_vs_s3_clients.md  containers.md  time_sleep_airflow.md
evidence_reports/pages/: index.md
evidence_reports/sources/stocks/: connection.yaml
minio/data/.minio.sys/tmp/.trash/22fb86b4-8f11-4bb8-b345-3e0789c27b0d/: xl.meta.bkp
scripts/: databases-init.sh  refactor_imports.yml  schema.sql
src/aws/: boto_client.py
src/config/: logging_config.py  nyc.env  settings.py
src/data_quality/: validator.py
src/database/: check_structure.py  data-profiling.py  data-profiling2.py  db_connection.py  debug_alpha.py  download_csv.py  ducdkb.sql  duckdb-profiling.py  list_buckets.py  load_parquet.py  nulls.py  parquet_db.py  pseudocode.md  s3_client.py  schema.py  test_connection.py
src/discovery/: hn_schema.py
src/extract/: extract.py  extract_alpha_vantage.py  extract_bucket.py  extract_nyc.py  extract_stocks.py  hn_extract.py  test_extract.py
src/load/: aws_client.py  db_connector.py  minio_client.py  s3_load.py
src/scripts/: audit_mem.py  container_dbt_cleaning.txt  databases-init.sh  gold_schema.sql  hn_data_discovery.py  init-secrets.sh  init_airflow.sh  refactor_logging.yml
src/setup/: db_initializer.py
src/sql/ddl/: 00_create_schemas.sql  01_create_audit_table.sql  01_create_schema_stocks.sql  02_create_weekly_adjusted_prices.sql  create_audit_table.sql  create_silver_table.sql
src/transform/: cleaning_parquet.py  data-discovery.py  dataframe.py  ducdkb.py  exploring_parquet.py  hn_discover.py  hn_transform.py  nyc_taxi.py  polars_trasnform.py  silver_loader.py  silver_transform_logic.py  stocks_transform.py
src/utils/: dag_helpers.py  dbt_helpers.py
test/: analyze_csv.py  delta_test.py  minioclient.py  querys.py  test_structlog.py
tests/: benchmarking.py  test_structlog.py  test_transformations.py
ui/: dashboard.py
(+31 files in other folders)
