[project]
name = "elt_pipeline_hn"
version = "0.1.0"
requires-python = ">= 3.12, <3.14"
dependencies = [
  "boto3>=1.40.54",
  "dbt-core>=1.8.8",
  "dbt-postgres~=1.8.0",
  "duckdb>=1.4.1",
  "minio>=7.2.18",
  "polars[pyarrow,pydantic]>=1.34.0",
  "psycopg2-binary>=2.9.11",
  "pyarrow>=22.0.0",
  "pydantic>=2.8.2",
  "requests>=2.32.5",
  "setuptools>=80.9.0",
  "structlog>=25.4.0",
]
[project.optional-dependencies]
dev = [
  "mkdocs-material>=9.6.22",
  "rich>=14.2.0",
  "tqdm>=4.67.1",
  "argcomplete>=3.6.3",
  "dotenv>=0.9.9",
  "python-dotenv>=1.1.1",
  "pandas>=2.3.3",
]
lint = ["apache-airflow>=2.8.0", "apache-airflow-providers-postgres"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["elt*"]

[tool.ty.environment]
root = ["./src", "."]

[dependency-groups]
dev = [
    "localstack-cli",
]
