[project]
name = "elt_pipeline_stocks"
version = "0.1.0"
requires-python = ">= 3.12, <3.14"
dependencies = [
  "apache-airflow>=2.10.0",
  "apache-airflow-providers-amazon>=9.18.0",
  "apache-airflow-providers-postgres>=6.5.0",
  "astronomer-cosmos~=1.11.0",
  "boto3>=1.40.54",
  "connectorx>=0.4.4",
  "dbt-core>=1.8.8",
  "dbt-postgres~=1.8.0",
  "plotly>=6.5.0",
  "polars[pyarrow,pydantic]>=1.34.0",
  "psycopg2-binary>=2.9.11",
  "pyarrow>=22.0.0",
  "pydantic>=2.8.2",
  "pytest>=9.0.2",
  "pytest-dotenv>=0.5.2",
  "requests>=2.32.5",
  "setuptools>=80.9.0",
  "streamlit>=1.52.2",
  "structlog>=25.4.0",
]
[project.optional-dependencies]
dev = [
  "mkdocs-material>=9.6.22",
  "rich>=14.2.0",
  "tqdm>=4.67.1",
  "argcomplete>=3.6.3",
  "dotenv>=0.9.9",
  "python-dotenv>=1.1.1",
  "pandas>=2.3.3",
  "pytest>=9.0.1",
  "requests-mock>=1.12.1",
]
lint = ["apache-airflow>=2.8.0", "apache-airflow-providers-postgres"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ty.environment]
root = ["./src", "."]

[tool.pytest.ini_options]
env_files = [".env"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
[tool.ruff]
line-length = 100
target-version = "py313"


[tool.ruff.lint]
select = ["E", "F", "I"] # Errores, Fallos, y orden de Imports
